Version 2.0.2
- Fixed Css issues in history panel
Version 2.0.1
- Changed middleware to insert_before Rack::Runtime instead of Rack::Lock to allow for config.threadsafe!
Version 2.0.0 - 1-11-2013